# ai-ants

./: .gitignore  Cargo.toml  README.md  justfile
crates/neural-network/: Cargo.toml
crates/neural-network-visualizer/: Cargo.toml
crates/neural-network-visualizer/src/: main.rs
crates/neural-network/src/: lib.rs  math.rs
crates/simulation/: Cargo.toml
crates/simulation-visualizer/: Cargo.toml
crates/simulation-visualizer/src/: main.rs  renderer.rs
crates/simulation/src/: ants.rs  food.rs  grid.rs  lib.rs  math.rs
crates/simulation/src/ant/: mod.rs
crates/simulation/src/pheromone/: mod.rs
crates/simulation/src/timings/: avg_duration.rs  mod.rs
crates/trainer/: Cargo.toml
crates/trainer/src/: benchmark.rs  main.rs  train.rs
crates/visualizer/: Cargo.toml
crates/visualizer/src/: main.rs  renderer.rs
