[package]
name = "simulation-visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simulation = { path = "../simulation" }
neural-network = { path = "../neural-network" }

ggez = "0.9.3"
serde = "1.0.199"
serde_json = "1.0.116"
clap = { version = "4.5.4", features = ["derive"] }
