[package]
name = "trainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simulation = { path = "../simulation" }
neural-network = { path = "../neural-network" }

rayon = "1.10.0"
itertools = "0.12.1"
clap = { version = "4.5.4", features = ["derive"] }
serde = "1.0.199"
serde_json = "1.0.116"
chrono = "0.4.38"
console = "0.15.8"
